# Data-Manager

./: .gitignore  CHANGELOG.md  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
Docs/: analytics.md  architecture.md  engineering.md  runner.md  storage.md  transactions.md  validation.md
Notebooks/: notes_1.ipynb
examples/: backend_example..py  data_analytics_example.py  data_engineer_example.py  data_validator_example.py
src/data_manager/: runner.py
src/data_manager/core/: base_job.py
src/data_manager/jobs/: _helper_transactions.py  data_analytics.py  data_engineer.py  data_validator.py
src/data_manager/storage/: In_memory_backend.py  base.py  csv_backend.py  json_backend.py
src/data_manager/transactions/: _savepoint.py  savepoint.py
src/tabular/core/: base_job.py
src/tabular/jobs/: data_engineer.py
src/tabular/storage/: csv_backend.py
tests/Data/: test_data.csv  test_data_1.csv  test_data_2.json
tests/Runner/: test_runner.ipynb  test_runner.py
tests/jobs/: data_engineer_test.ipynb  test.ipynb  test_data_analytics.py  test_data_engineering.py  test_data_validator.py
tests/storage/: csv_backend_test.ipynb  json_backend_test.ipynb  test.ipynb  test_json_backend.py
