[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-manager-framework"
version = "0.1.0"
description = "A modular framework for data engineering, validation, and analytics workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
{name = "Krish Kumar"}
]

dependencies = [
"pandas","numpy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
